# DynamicQml

./: .gitignore  CMakeLists.txt
App/: CMakeLists.txt  MyQtApp
App/Jsons/: config.json  config1.json
App/resources/: resources.qrc
App/resources/qml/: CustomColumnLayout.qml  CustomGridLayout.qml  CustomProgressBar.qml  CustomRowLayout.qml  CustomSlider.qml  CustomTab.qml  CustomTabBar.qml  CustomTabButton.qml  CustomTabLayout.qml  main.qml
App/src/: Application.cpp  Application.h  ParseJson.cpp  ParseJson.h  main.cpp
